bindings/c/include/proven.h

/** @brief Result for boolean operations */
typedef struct { int32_t status; bool value; } ProvenBoolResult;
/**
 * @brief Result for string operations.
 * @note Caller must free value using proven_free_string().
 */
typedef struct { int32_t status; char* value; size_t length; } ProvenStringResult;
/** @brief Result for floating-point operations */
typedef struct { int32_t status; double value; } ProvenFloatResult;
/* ============================================================================
 * Memory Management (1 function)
 * ============================================================================ */

/**
 * @brief Free a string allocated by Proven functions.
 * @param ptr String to free (may be NULL).
 */
void proven_free_string(char* ptr);
/* ============================================================================
 * SafeHeader - HTTP header safety (6 functions)
 * ============================================================================ */

/**
 * @brief Check for CRLF injection characters in header value.
 * @return Result with detection status (true = CRLF found).
 */
ProvenBoolResult proven_header_has_crlf(const uint8_t* ptr, size_t len);
/**
 * @brief Check if header name is a valid token per RFC 7230.
 * @return Result with validation status.
 */
ProvenBoolResult proven_header_is_valid_name(const uint8_t* ptr, size_t len);
/**
 * @brief Check if header name is in the dangerous headers list.
 * @return Result with detection status (true = dangerous).
 */
ProvenBoolResult proven_header_is_dangerous(const uint8_t* ptr, size_t len);
/**
 * @brief Create validated header string "Name: Value".
 * @return Result with rendered header (caller must free).
 */
ProvenStringResult proven_header_render(
    const uint8_t* name_ptr, size_t name_len,
    const uint8_t* value_ptr, size_t value_len
);
/**
 * @brief Build HSTS header value.
 * @param max_age Max-Age directive in seconds.
 * @param include_subdomains Whether to include includeSubDomains.
 * @param preload Whether to include preload directive.
 * @return Result with HSTS header value (caller must free).
 */
ProvenStringResult proven_header_build_hsts(int64_t max_age, bool include_subdomains, bool preload);
/**
 * @brief Check if password is in common passwords list.
 * @return true if password appears in the common list.
 */
bool proven_password_is_common(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeUnit - Physical unit conversions (2 functions)
 * ============================================================================ */

/** @brief Length units. */
typedef enum {
    PROVEN_LENGTH_METERS      = 0,
    PROVEN_LENGTH_KILOMETERS  = 1,
    PROVEN_LENGTH_CENTIMETERS = 2,
    PROVEN_LENGTH_MILLIMETERS = 3,
    PROVEN_LENGTH_FEET        = 4,
    PROVEN_LENGTH_INCHES      = 5,
    PROVEN_LENGTH_MILES       = 6,
    PROVEN_LENGTH_YARDS       = 7
} ProvenLengthUnit;
/** @brief Temperature units. */
typedef enum {
    PROVEN_TEMP_CELSIUS    = 0,
    PROVEN_TEMP_FAHRENHEIT = 1,
    PROVEN_TEMP_KELVIN     = 2
} ProvenTempUnit;
/**
 * @brief Convert length between units.
 * @return PROVEN_ERR_INVALID_ARGUMENT for NaN input.
 */
ProvenFloatResult proven_unit_convert_length(double value, ProvenLengthUnit from, ProvenLengthUnit to);
/**
 * @brief Convert temperature between units.
 * @return PROVEN_ERR_OUT_OF_BOUNDS for temperatures below absolute zero.
 */
ProvenFloatResult proven_unit_convert_temp(double value, ProvenTempUnit from, ProvenTempUnit to);