bindings/mojo/src/lib_proven.mojo


# =============================================================================
# SafePassword FFI
# =============================================================================


fn proven_password_is_common(
    ptr: UnsafePointer[UInt8], length: Int
) -> Bool:
    """Check if password is in the common passwords list."""
    return external_call[
        "proven_password_is_common", Bool, UnsafePointer[UInt8], Int
    ](ptr, length)


# =============================================================================
# SafeUnit FFI (length unit aliases)
# =============================================================================

alias PROVEN_LENGTH_METERS: Int32 = 0
alias PROVEN_LENGTH_KILOMETERS: Int32 = 1
alias PROVEN_LENGTH_CENTIMETERS: Int32 = 2
alias PROVEN_LENGTH_MILLIMETERS: Int32 = 3
alias PROVEN_LENGTH_FEET: Int32 = 4
alias PROVEN_LENGTH_INCHES: Int32 = 5
alias PROVEN_LENGTH_MILES: Int32 = 6
alias PROVEN_LENGTH_YARDS: Int32 = 7

alias PROVEN_TEMP_CELSIUS: Int32 = 0
alias PROVEN_TEMP_FAHRENHEIT: Int32 = 1
alias PROVEN_TEMP_KELVIN: Int32 = 2


fn proven_unit_convert_length(
    value: Float64, from_unit: Int32, to_unit: Int32
) -> FloatResult:
    """Convert length between units."""
    return external_call[
        "proven_unit_convert_length", FloatResult, Float64, Int32, Int32
    ](value, from_unit, to_unit)


fn proven_unit_convert_temp(
    value: Float64, from_unit: Int32, to_unit: Int32
) -> FloatResult:
    """Convert temperature between units."""
    return external_call[
        "proven_unit_convert_temp", FloatResult, Float64, Int32, Int32
    ](value, from_unit, to_unit)


# =============================================================================
# SafeHeader FFI
# =============================================================================


fn proven_header_has_crlf(
    ptr: UnsafePointer[UInt8], length: Int
) -> BoolResult:
    """Check for CRLF injection characters in header value."""
    return external_call[
        "proven_header_has_crlf", BoolResult, UnsafePointer[UInt8], Int
    ](ptr, length)


fn proven_header_is_valid_name(
    ptr: UnsafePointer[UInt8], length: Int
) -> BoolResult:
    """Check if header name is a valid token per RFC 7230."""
    return external_call[
        "proven_header_is_valid_name", BoolResult, UnsafePointer[UInt8], Int
    ](ptr, length)


fn proven_header_is_dangerous(
    ptr: UnsafePointer[UInt8], length: Int
) -> BoolResult:
    """Check if header name is in the dangerous headers list."""
    return external_call[
        "proven_header_is_dangerous", BoolResult, UnsafePointer[UInt8], Int
    ](ptr, length)


fn proven_header_render(
    name_ptr: UnsafePointer[UInt8],
    name_len: Int,
    value_ptr: UnsafePointer[UInt8],
    value_len: Int,
) -> StringResult:
    """Create validated header string 'Name: Value'. Caller must free result."""
    return external_call[
        "proven_header_render",
        StringResult,
        UnsafePointer[UInt8],
        Int,
        UnsafePointer[UInt8],
        Int,
    ](name_ptr, name_len, value_ptr, value_len)


fn proven_header_build_hsts(
    max_age: Int64, include_subdomains: Bool, preload: Bool
) -> StringResult:
    """Build HSTS header value. Caller must free result."""
    return external_call[
        "proven_header_build_hsts", StringResult, Int64, Bool, Bool
    ](max_age, include_subdomains, preload)


# =============================================================================
# Utility: copy StringResult to a Mojo String and free the C allocation
# =============================================================================


fn string_result_to_string(result: StringResult) -> Optional[String]:
    """Convert a successful StringResult to a Mojo String, freeing the C buffer.

    Returns None if the result indicates failure.
    """
    if result.failed():
        return None

    if result.length == 0:
        proven_free_string(result.ptr)
        return String("")

    # Copy bytes from the C allocation into a Mojo String
    var buf = List[UInt8](capacity=result.length + 1)
    for i in range(result.length):
        buf.append(result.ptr[i])
    buf.append(0)  # null terminator for String
    proven_free_string(result.ptr)
    return String(buf^)
